# pjobs

./: .gitignore  README.md  pyproject.toml
jobs/: cli.py  config.py  display.py  search.py
